[metadata]
name = tripleo-ci
summary = TripleO documentation
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://opendev.org/openstack/tripleo-ci
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
python_requires = >= 3.6

[files]
data_files =
    usr/local/share/ansible/roles = roles/*


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
warnerrors = False

[tool:pytest]
norecursedirs = .git .tox dist .eggs
# do not set log_cli to true by default as it would display misleading
# exception during normal test execution.
# log_cli = true

[flake8]
# based on https://github.com/psf/black
ignore = E203,E501,W503,W504,D
# "D" added because we do not use docstrings checks, yet
