[metadata]
name = tripleo-get-hash
version = 0.0.1
author = Marios Andreou
author_email = marios@redhat.com
description = Get the tripleo build hash for a known RDO named tag.
long_description = file: README.md LICENSE
long_description_content_type = text/markdown
url = https://opendev.org/openstack/tripleo-ci/tripleo-get-hash/
project_urls =
    Bug Tracker = https://launchpad.net/tripleo
license_file = LICENSE
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache License, Version 2.0
    Programming Language :: Python

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml
    requests
tests_require =
    requests_mock

[options.entry_points]
console_scripts =
    tripleo-get-hash = tripleo_get_hash.__main__:cli_entrypoint

[options.data_files]
    /etc/tripleo_get_hash/ = config.yaml
